# SP-metric-analysis

./: LICENSE  README.md  cent_con.cpp  manual.docx  queuecount.sh  run_kernels.sh
RRT_CUDA/: .Makefile.swp  CUDA_collision_check_memcpy.cu  CUDA_collision_check_memcpy1.cu  CUDA_collision_check_memcpy_old.cu  CUDA_collision_check_memcpy_working_cpp.cu  Makefile  RRT  performace_analysis.txt  performance_analysis (copy).py  performance_analysis.py  read_text_file.py  rfunc.cpp  rfunc.h  rrt_memcpy.hpp
SimpleAmqpClient/examples/: RPCClient.cpp
TSP-Solver/: Approx.cpp  BnB.cpp  Greedy.cpp  HC.cpp  Read.cpp  Readme.txt  SA.cpp  TSP.h  TSPSolver (copy).cpp  TSPSolver.cpp  test.cpp  tsp
TSP-Solver/DATA/: LS2.cpp
YOLO-DynaSLAM/: CMakeLists.txt  CameraTrajectory.txt  KeyFrameTrajectory.txt  SLAM_stats.txt  bad.list
YOLO-DynaSLAM/include/: Conversion.h  Converter.h  Frame.h  FrameDrawer.h  Geometry.h  Initializer.h  LoopClosing.h  MapPoint.h  MaskNet.h  MaskNetStereo.h  ORBextractor.h  ORBmatcher.h  PnPsolver.h  Sim3Solver.h  System.h  Tracking.h  region.h  regionprops.h  yolo.h
YOLO-DynaSLAM/src/: Conversion.cc  Geometry.cc  MaskNet.cc  Sim3Solver.cc  Tracking.cc  yolo.cc
darknet_fs/darknet/: Depth_Estimation.cfg  Depth_Estimation_leaky.cfg  Depth_Estimation_or.cfg  Depth_estimation_multiple_images.sh  Depth_estimation_single_Image.sh  Makefile  bad.list  depth_time.txt  image_yolov4_tiny.sh  image_yolov4_tiny_single_image.sh  instruction_for_yolo_slam.txt  performace_analysis.txt  performance_analysis.py  uselib
osqp-eigen/: CMakeLists.txt  package.xml
osqp-eigen/example/: CMakeLists.txt
osqp-eigen/example/src/: MPCExample.cpp
rabbitmq-c/: CMakeLists.txt
rabbitmq-c/examples/: CMakeCache.txt  Makefile  amqp_listen.c  cmake_install.cmake
rabbitmq-c/fuzz/: CMakeLists.txt  README.md  fuzz_server.c
visualization/: datafile.m  s_summmary_bar.fig  scatter_slam.m  slam_coor_final.fig  sp-ind.fig
visualization/all_cfs/: GPU_time.txt  MPC_time.txt  SLAM_time.txt  SLAM_time.xlsx  SP_time_allcfs.xlsx  SP_time_cfs.m  cent_time.txt  depth_time.txt  sp_allcfs.fig
visualization/m20fifo_allcfs/: GPU_time.txt  MPC_time.txt  SLAM_time.txt  SLAM_time.xlsx  SP_time_m20fifo_allcfs.xlsx  cent_time.txt  m20fifo_allcfs.m
visualization/m30r40fifo_allcfs/: GPU_time.txt  MPC_time.txt  SLAM_time.txt  (+6 more)
(+163 files in other folders)
